--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 2. L이나 R을 꾹 누르고 있으면 가드가 쳐진다.<br>
 3. 아래 버튼을 누르면 공격이 가능하다. 연타하면 공격 모션이 달라진다.<br>
 4. 움직이지 않는 상태로 공격버튼을 꾹 누르면 헬리콥터가 된다. 창을 빙빙 돌리면서 날아가는데 날아가는 곳 아래에는 뭘 마구 던져서 데미지를 주고 창을 돌리는 곳에 맞아도 데미지를 준다.<br>
+5. 움직이면서 공격버튼을 꾹 누르면 창을 던져서 공격할 수 있다.
 <br>
 
 <p style='text-align:center;'><span style="font-size: 160%; color: FF8000;"><strong>3. 웨이들 디</strong></span></p><br>
@@ -130,7 +131,7 @@
 커비보다 조그만 물빛 설치류 형태의 캐릭터이다. 날개 없이도 하늘을 날아다니며, 오른쪽 귀 모퉁이에 벌레 먹은 듯한 구멍이 나있다. 다른 캐릭터들보다 더 영롱하게 빛나는 눈도 특징이다.<br>
 커비가 파괴된 웨이들 디 마을에 당도했을 때, 비스트 군단에게 궁지에 몰린 뒤 붙잡혀 황금 감옥에 혼자 갇혀있었으나 우연히 만난 커비에 의해 구출되고 웨이들 디들을 구하기 위한 모험을 함께하게 된다. 그리고 최종 스테이지 '랩 디스커벌'에 도달하자 비스트 군단의 군단장 '레온갈프'가 모든 전말을 알려주는데…<br>
 사실 에피린은 펙트 포가의 작은 선한 마음만이 떨어져 나가 태어난 일종의 파편 같은 존재이며 ID-F86,즉 펙트 에피리스의 파편이다.<br>
-
+마지막에 The Ultimate Cup Z를 깨고 펙트 에피리스를 잡으면 펙트 에피리스의 파편을 이 녀석이 흡수한다.
 <a href="test2.html" title="돌아가기">"돌아가기"</a>
 
 
