--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
   <title>별의 커비 디스커버리 설명</title>
 </head>
+  
 <body>
 별의 커비 디스커버리 게임을 설명하는 곳입니다★<br>
 ※스포 주의!!!
