--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <img src="spaceCopy2.jpg" style="width:80px; height:110px" alt="커비 스페이스 레인저 사진입니다"><br>
 해머: 망치로 적을 내리친다.<br>
 &nbsp뿅망치: 연타가 강해진 해머이다.<br>
-<video src="redHammer.mp4" width="320" height="240" poster="redhammer.png" loop controls></video><br>
+<video src="redHammer.mp4" width="320" height="240" poster="redhammer.png" controls></video><br>
 &nbsp와일드 해머: 원시 커비같은 모습으로 돌로 된 망치를 사용한다.<br>
 &nbsp마스크 해머: 와일드 디디디의 가면을 쓴 모습으로 망치 2개를 사용한다.<br>
 <img src="maskCopy2.jpg" style="width:190px; height:150px" alt="커비 마스크 해머 사진입니다"><br>
